# plasmoid-ultimate-gmail-feed

./: CMakeLists.txt
icons/: CMakeLists.txt
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  MessageDelegate.qml  configAdvanced.qml  configGeneral.qml  configUpdater.qml  main.qml
plugin/: CMakeLists.txt  networkstatus.cpp  networkstatus.h  notification.cpp  ultimategmailfeedplugin.cpp  ultimategmailfeedplugin.h
po/: CMakeLists.txt
